# screen-party

./: Cargo.toml  README.md
crates/audio/: Cargo.toml
crates/audio/src/: capturer.rs  lib.rs  loopback.rs  player.rs
crates/capture/: Cargo.toml
crates/capture/src/: capturer.rs  frame.rs  hotkey.rs  lib.rs  quadtree.rs
crates/capture/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/party/: Cargo.toml
crates/party/src/: cli.rs  client_window.rs  identity.rs  main.rs
crates/party/src/net/: broadcaster.rs  cipher.rs  client.rs  mod.rs  proto.rs  speed_test.rs  stream_cache.rs
