[package]
name = "capture"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
winit = "0.30"
softbuffer = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

# macOS: ScreenCaptureKit via objc2 bindings
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"

# Linux: X11 or wlroots/pipewire
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", optional = true, features = ["image"] }
