[package]
name = "party"
version.workspace = true
edition.workspace = true

[dependencies]
capture = { path = "../capture" }
audio = { path = "../audio" }
thiserror.workspace = true
winit = "0.30"
softbuffer = "0.4"
clap = { version = "4", features = ["derive"] }
pgp = "0.13"
smallvec = "1"
zeroize = "1"
hex = "0.4"
rpassword = "7"
anyhow = "1"
font8x8 = "0.3"
zstd = "0.13"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
